--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<!--	End of Spring	-->
+
+		<!--	Postgres	-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!--	Lombok	-->
 		<dependency>
@@ -81,7 +92,7 @@
 		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>5.0.0-alpha.12</version>
+			<version>5.0.0-beta.3</version>
 		</dependency>
 
 	</dependencies>
